secondfile/objects/Partner_Course__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Partner Courses</relationshipLabel>
        <relationshipName>Partner_Courses</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ContactID__c</fullName>
        <formula>Name__r.Id</formula>
        <label>ContactID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Course_Completed_Date__c</fullName>
        <label>Course Completed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Course_Expiration_Date__c</fullName>
        <formula>Course_Completed_Date__c + Days_Valid__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Course Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Course_ID__c</fullName>
        <formula>Course__r.Course_Id__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Course ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Course_Name__c</fullName>
        <formula>Course__r.Course_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Course Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Course_Score__c</fullName>
        <label>Course Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Course_Status__c</fullName>
        <formula>IF(Course_Expiration_Date__c&lt; TODAY() , &quot;Expired&quot;, IF(Course_Expiration_Date__c &gt;= TODAY() ,&quot;Completed&quot;,BLANKVALUE(NetExam_Course_Status__c, &quot;Enrolled&quot;) ) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Course Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Course__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Course</label>
        <referenceTo>NE_Course__c</referenceTo>
        <relationshipLabel>Partner Courses</relationshipLabel>
        <relationshipName>Partner_Courses</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Currency__c</fullName>
        <label>Currency</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Days_Valid__c</fullName>
        <formula>IF( ISBLANK(Course_Completed_Date__c) , NULL, 365)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days Valid</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Partner Courses</relationshipLabel>
        <relationshipName>Partner_Courses</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>NetExam_Course_Status__c</fullName>
        <label>NetExam Course Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Price__c</fullName>
        <label>Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <label>Product</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Partner Course</label>
    <nameField>
        <displayFormat>PC-{00000}</displayFormat>
        <label>Partner Course Reference</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Partner Courses</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>